outputs/tsp_constructive-constructive/2025-09-19_00-14-35/evaluations/problem_eval-3832921092730773651_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance" metric that considers both local and global connectivity, and employs a sigmoid-based weighting adjustment to smooth transitions between exploration and exploitation phases.}
              ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance" metric that considers both local and global connectivity, and employs a sigmoid-based weighting adjustment to smooth transitions between exploration and exploitation phases.}
              ^
SyntaxError: unterminated string literal (detected at line 1)
